[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quant-daily"
version = "0.1.0"
description = "股票和基金量化日报系统，支持 GitHub Actions 定时推送钉钉。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.0",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
